--- a/valeriya-bondarenko.html
+++ b/valeriya-bondarenko.html
@@ -105,6 +105,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    font-size: 0.85rem;
   }
 
   .meta-list li {
@@ -112,7 +113,6 @@
     justify-content: space-between;
     padding: 0.2rem 0;
     border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
   }
 
   .meta-value {
@@ -173,15 +173,15 @@
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">VALERIYA BONDARENKO</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Behind-the-Scenes Archetype · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Behind-the-Scenes Archetype · Transactional Leader</p>
       <p class="prospect-subtitle">Columbia University · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.0</div>
+      <div class="grade-score">90</div>
       <div class="grade-tier">Round 3–4 Candidate</div>
-      <div class="grade-note">High-upside quant with late-season recovery</div>
+      <div class="grade-note">High-upside analyst with technical curiosity + steady growth trajectory</div>
     </div>
   </section>
 
@@ -189,36 +189,34 @@
   <!-- META -->
   <!-- ============================= -->
   <section class="prospect-meta">
+
+    <!-- LEFT (Prospect Info) -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>School</span><span class="meta-value">Columbia University</span></li>
+        <li><span>College</span><span class="meta-value">Columbia University</span></li>
         <li><span>Major</span><span class="meta-value">Operations Research</span></li>
-        <li><span>Minors</span><span class="meta-value">Applied Math & AI</span></li>
+        <li><span>Minor</span><span class="meta-value">Applied Math & AI</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.2</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
         <li><span>Hometown</span><span class="meta-value">Larkspur, CA</span></li>
       </ul>
     </div>
 
+    <!-- RIGHT (MAP Profile) -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fall Rank</span><span class="meta-value">3 / 63</span></li>
-        <li><span>GPA</span><span class="meta-value">3.2</span></li>
-        <li><span>Personality</span><span class="meta-value">1. Behind the Scenes</span></li>
-        <li><span>Leadership</span>
-          <span class="meta-value">
-            Thoughtful contributor · quiet operator · strong communicator with MAP Staff
-          </span>
-        </li>
-        <li><span>Performance</span>
-          <span class="meta-value">
-            Strong start → struggled with Playoff pace → rallied late with meaningful improvement
-          </span>
-        </li>
+        <li><span>Official Points</span><span class="meta-value">1269</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">3 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">16 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">16 / 30</span></li>
+        <li><span>Personality</span><span class="meta-value">Behind the Scenes</span></li>
+        <li><span>Leadership</span><span class="meta-value">Transactional (In-the-Bonus)</span></li>
       </ul>
     </div>
+
   </section>
 
   <!-- ============================= -->
@@ -227,18 +225,17 @@
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Valeriya opened Fall Diamond League with one of the strongest starts in the entire class — disciplined, curious, and 
-      highly engaged. Her analytical background in Operations Research, Applied Math, and AI is a genuine asset, giving her a 
-      quant-driven lens uncommon among first-year MAP prospects.  
+      Valeriya opened the fellowship with one of the strongest early technical foundations in the cohort — especially in data, 
+      quantitative reasoning, and structured problem-solving. Her Behind-the-Scenes profile shows up in how she thinks: calm, 
+      methodical, and deeply observant. She prefers to work independently, test her ideas, and present once she’s confident in 
+      the product.
       <br><br>
-      The Playoffs were an adjustment period. The pace accelerated, deadlines tightened, and she initially struggled to keep 
-      up — missing or submitting a few assignments late. But what stands out most is her response: she communicated early and 
-      often with Student Support, adapted quickly, and finished the season strong. That late-season recovery is what ultimately 
-      earned her a 4-star rating and sustained Round 3–4 projection.
+      The playoff phase required a major adjustment in pace, and while she initially struggled to match the speed of execution, 
+      she corrected course and finished the season on an upward trajectory. Her communication with Student Support was proactive, 
+      consistent, and mature — a strong signal for future internship environments.
       <br><br>
-      As a Behind-the-Scenes personality, she prefers to work quietly and independently, but she’s learning how to bring more 
-      voice and presence into group settings — a key next step for interviews and client-facing work. Her long-term upside is 
-      meaningful, especially with her technical skill stack and natural humility.
+      With continued reps, especially in valuation and higher-pressure team settings, she can develop into a reliable analyst 
+      with real technical ceiling.
     </p>
   </section>
 
@@ -248,12 +245,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Quantitative upside:</strong> OR + Applied Math + AI foundation gives her real long-term potential.</li>
-      <li><strong>Strong start to MAP:</strong> early assignments were polished, thoughtful, and detail-oriented.</li>
-      <li><strong>Coachable and communicative:</strong> proactively reached out to MAP when behind — shows maturity.</li>
-      <li><strong>High empathy & emotional intelligence:</strong> tutoring, coaching, youth leadership demonstrate people skills.</li>
-      <li><strong>Resilient worker:</strong> recovered well after mid-season struggles.</li>
-      <li><strong>Disciplined athlete:</strong> D1 Ivy League diver balancing rigorous academics and sport.</li>
+      <li><strong>Analytical curiosity:</strong> strong OR + Applied Math background with early exposure to data science + ML fundamentals.</li>
+      <li><strong>Behind-the-Scenes strengths:</strong> thoughtful, detail-oriented, independent worker who produces clean deliverables.</li>
+      <li><strong>Calm, structured thinker:</strong> even-keeled and highly measured in how she approaches problems.</li>
+      <li><strong>Technical upside:</strong> Python, statistics, modeling, pattern recognition — strong foundation for IB, S&T, or consulting analytics.</li>
+      <li><strong>Resilient rebound:</strong> improved significantly after early playoff adjustment period.</li>
+      <li><strong>Professional communicator:</strong> proactive with MAP Support, receptive to feedback, and coachable.</li>
     </ul>
   </section>
 
@@ -263,10 +260,10 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue strengthening time management to meet fast-paced IB timelines.</li>
-      <li>Build confidence and vocal presence in interviews — she has more to offer than she shows.</li>
-      <li>Translate technical expertise into business-oriented narratives.</li>
-      <li>Push to maintain consistency throughout full MAP seasons, not just strong starts and finishes.</li>
+      <li>Continue improving speed of execution — particularly under compressed IB-style deadlines.</li>
+      <li>Push herself to speak earlier and more confidently in group settings (common for Behind-the-Scenes profiles).</li>
+      <li>Sharpen business storytelling to complement her technical reasoning.</li>
+      <li>Further strengthen academic profile as GPA grows — important signal for competitive firms.</li>
     </ul>
   </section>
 
@@ -276,12 +273,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A high-upside, analytically gifted Round 3–4 prospect with a quant-heavy skillset rare among MAP freshmen and sophomores. 
-      While her initial high ranking didn’t fully match her mid-season output, her late recovery — paired with coachability, 
-      communication, and a strong technical foundation — supports her long-term potential as a future standout. 
+      A 4-star, Round 3–4 MAP prospect with meaningful technical upside and a steady, thoughtful approach to work. With more reps 
+      in valuation, faster decision-making, and continued practice communicating her thinking out loud, Valeriya can become a 
+      consistent, reliable analyst in Summer 2027 pipelines.  
       <br><br>
-      With more consistency and growing confidence in live settings, Valeriya could become one of the true sleepers in the 
-      Summer 2027 pipeline — a 4-star prospect with meaningful room to rise.
+      She brings a strong quantitative foundation, a calm presence, and a highly coachable mindset — all indicators that her 
+      ceiling is still rising. A valuable long-term developmental prospect for any data-driven or execution-heavy team.
     </p>
   </section>
 
