--- a/valeriya-bondarenko.html
+++ b/valeriya-bondarenko.html
@@ -105,7 +105,6 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 0.85rem;
   }
 
   .meta-list li {
@@ -113,6 +112,7 @@
     justify-content: space-between;
     padding: 0.2rem 0;
     border-bottom: 1px dotted #e5e8f1;
+    font-size: 0.85rem;
   }
 
   .meta-value {
@@ -151,18 +151,6 @@
   .section-list li {
     margin-bottom: 0.35rem;
   }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
 </style>
 
 <div class="prospect-page">
@@ -173,7 +161,7 @@
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">VALERIYA BONDARENKO</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Behind-the-Scenes Archetype · Transactional Leader</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Behind-the-Scenes Archetype · Investment Banking Track</p>
       <p class="prospect-subtitle">Columbia University · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
@@ -181,16 +169,16 @@
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">90</div>
       <div class="grade-tier">Round 3–4 Candidate</div>
-      <div class="grade-note">High-upside analyst with technical curiosity + steady growth trajectory</div>
+      <div class="grade-note">High-upside operator with strong late-season recovery</div>
     </div>
   </section>
 
   <!-- ============================= -->
-  <!-- META -->
+  <!-- META (Prospect Info + MAP Profile) -->
   <!-- ============================= -->
   <section class="prospect-meta">
 
-    <!-- LEFT (Prospect Info) -->
+    <!-- LEFT — PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -204,16 +192,22 @@
       </ul>
     </div>
 
-    <!-- RIGHT (MAP Profile) -->
+    <!-- RIGHT — MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
         <li><span>Official Points</span><span class="meta-value">1269</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">3 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">16 / 63</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">16 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">3 / 63</span></li>
         <li><span>Phase 2 Rank</span><span class="meta-value">16 / 30</span></li>
-        <li><span>Personality</span><span class="meta-value">Behind the Scenes</span></li>
-        <li><span>Leadership</span><span class="meta-value">Transactional (In-the-Bonus)</span></li>
+        <li>
+          <span>Personality</span>
+          <span class="meta-value">1. Behind the Scenes (Reserved Personality · Self-Assuredness · Attention to Detail)</span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">In-the-Bonus — Transactional (Transactional Leader · Structure · Accountability)</span>
+        </li>
       </ul>
     </div>
 
@@ -225,17 +219,15 @@
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Valeriya opened the fellowship with one of the strongest early technical foundations in the cohort — especially in data, 
-      quantitative reasoning, and structured problem-solving. Her Behind-the-Scenes profile shows up in how she thinks: calm, 
-      methodical, and deeply observant. She prefers to work independently, test her ideas, and present once she’s confident in 
-      the product.
+      Valeriya came out of the gates strong in Phase 1, posting one of the highest early-season scores in the cohort. 
+      As a classic Behind-the-Scenes personality, she thrives when she can think deeply, work independently, and refine 
+      her output before bringing it to the table. The early analytics, discipline, and consistency were all there — and it 
+      helped her secure a top-three Phase 1 ranking.
       <br><br>
-      The playoff phase required a major adjustment in pace, and while she initially struggled to match the speed of execution, 
-      she corrected course and finished the season on an upward trajectory. Her communication with Student Support was proactive, 
-      consistent, and mature — a strong signal for future internship environments.
-      <br><br>
-      With continued reps, especially in valuation and higher-pressure team settings, she can develop into a reliable analyst 
-      with real technical ceiling.
+      The Playoffs introduced a steeper learning curve, and she initially struggled adjusting to the increased pace and 
+      the intensity of execution deliverables. Instead of folding, she recalibrated, recovered late, and closed strong — a 
+      meaningful signal for long-term growth potential. Her technical inclination (Python, data science, OR) and 
+      reliability with Student Support suggest genuine upside as she matures through more reps.
     </p>
   </section>
 
@@ -245,12 +237,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Analytical curiosity:</strong> strong OR + Applied Math background with early exposure to data science + ML fundamentals.</li>
-      <li><strong>Behind-the-Scenes strengths:</strong> thoughtful, detail-oriented, independent worker who produces clean deliverables.</li>
-      <li><strong>Calm, structured thinker:</strong> even-keeled and highly measured in how she approaches problems.</li>
-      <li><strong>Technical upside:</strong> Python, statistics, modeling, pattern recognition — strong foundation for IB, S&T, or consulting analytics.</li>
-      <li><strong>Resilient rebound:</strong> improved significantly after early playoff adjustment period.</li>
-      <li><strong>Professional communicator:</strong> proactive with MAP Support, receptive to feedback, and coachable.</li>
+      <li><strong>High Phase 1 performance:</strong> Top-three ranking reflects strong foundational ability when pace is stable.</li>
+      <li><strong>Deep technical curiosity:</strong> OR/Data Analytics/Applied Math academic path aligns with modern IB/quant trends.</li>
+      <li><strong>Reliable communicator:</strong> Proactive with Student Support — demonstrates maturity and accountability.</li>
+      <li><strong>Behind-the-Scenes strengths:</strong> Methodical, reflective, and detail-oriented in her approach to work.</li>
+      <li><strong>Strong late-season recovery:</strong> Ability to adjust, reset, and improve under pressure.</li>
+      <li><strong>Experience balancing complexity:</strong> Ivy-level coursework + D1 athletics reveals resilience and structure.</li>
     </ul>
   </section>
 
@@ -260,10 +252,10 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue improving speed of execution — particularly under compressed IB-style deadlines.</li>
-      <li>Push herself to speak earlier and more confidently in group settings (common for Behind-the-Scenes profiles).</li>
-      <li>Sharpen business storytelling to complement her technical reasoning.</li>
-      <li>Further strengthen academic profile as GPA grows — important signal for competitive firms.</li>
+      <li>Adjusting more quickly to elevated pace and pressure in Playoff-style environments.</li>
+      <li>Building more consistency across weekly assignments to match her strong highs.</li>
+      <li>Developing the vocal confidence to complement her natural behind-the-scenes strengths.</li>
+      <li>Continuing to sharpen financial modeling fundamentals to match peers with stronger GPAs.</li>
     </ul>
   </section>
 
@@ -273,13 +265,16 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A 4-star, Round 3–4 MAP prospect with meaningful technical upside and a steady, thoughtful approach to work. With more reps 
-      in valuation, faster decision-making, and continued practice communicating her thinking out loud, Valeriya can become a 
-      consistent, reliable analyst in Summer 2027 pipelines.  
+      A high-upside Round 3–4 candidate with one of the strongest underlying skill foundations in the class. 
+      If her Phase 1 version becomes the norm — disciplined, steady, thoughtful, technically grounded — she projects 
+      as a reliable, structured analyst who excels in execution-heavy environments. The personality–leadership pairing 
+      (Behind the Scenes × Transactional) makes her a natural systems-builder: someone who thrives in structured 
+      workflows and anchors team stability.
       <br><br>
-      She brings a strong quantitative foundation, a calm presence, and a highly coachable mindset — all indicators that her 
-      ceiling is still rising. A valuable long-term developmental prospect for any data-driven or execution-heavy team.
+      With continued reps and improved pacing, Valeriya has the potential to outperform expectations and develop into 
+      the type of disciplined operator banks love to have in the analyst bullpen.
     </p>
   </section>
 
 </div>
+
